digits-eks/eks-prod/shared-services/cellxgene/cellxgene-msk-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cellxgene-deploy-1
  labels:
    app: cellxgene
    dataset: pbmc3k.h5ad
spec:
  replicas: 1
  selector:
    matchLabels:
      dataset: pbmc3k.h5ad
  template:
    metadata:
      labels:
        dataset: pbmc3k.h5ad
    spec:
      containers:
        - name: cellxgene-app
          image: 'edit01/cellxgene:1.2.0'
          command: ["cellxgene"]
          args: [
            "launch", 
            "-p", 
            "8080", 
            "--host", 
            "0.0.0.0", 
            "--backed", 
            "--disable-annotations", 
            "--disable-gene-sets-save", 
            "s3://jason-test-workspace/pbmc3k.h5ad"
          ]
          ports:
          - containerPort: 8080
            protocol: TCP
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 500Mi 
              cpu: 250m
          readinessProbe: # Block traffic to container if not ready
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 60 
            failureThreshold: 10
          livenessProbe: # Restart container if not healthy
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 600  # 10min
            periodSeconds: 3600 # 1hr
            failureThreshold: 2
      nodeSelector:
        eks.amazonaws.com/nodegroup: cellxgene-large-memory-nodes
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "eks-cellxgene"
          effect: "NoSchedule"

---
kind: Service
apiVersion: v1
metadata:
  name: cellxgene-service-1
  labels: 
    app: cellxgene
    dataset: pbmc3k.h5ad
spec:
  selector:
    dataset: pbmc3k.h5ad
  ports:
    - port: 8080
